# dcs-hub

./: .gitignore  README.md  districts.yaml.example  pyproject.toml  setup.sh
config/: wg0.conf.template
dashboard/: app.py
docs/: HOST_NETWORK_REQUIREMENTS.md
enrollment/: admin_cli.py  allocator.py  db.py  main.py  models.py  schema.sql  tokens.py  wg.py
firewall/: iptables.rules  sysctl.conf
headscale/: acl.hujson  config.yaml
scripts/: backup.sh  cert-check.sh  restore.sh
systemd/: detel-backup.service  detel-backup.timer  detel-cert-check.service  detel-cert-check.timer  detel-dashboard.service  enrollment.service  subterra-backup.service  subterra-backup.timer  subterra-cert-check.service  subterra-cert-check.timer  subterra-dashboard.service
systemd/wg-quick@wg0.service.d/: override.conf
tests/: test_backup_restore.sh  test_dashboard.sh  test_enroll_flow.py  test_hub_smoke.sh
zabbix-vm/: apply-config.sh  bootstrap.sh  dcs  dcs-mint-key  dcs-preflight  dcs-setup  detel  detel-districts  detel-setup  install.sh
