[project]
name = "subterra-wg-hub"
version = "0.1.0"
description = "Concentrator + enrollment service for Subterra's WireGuard fleet"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "httpx>=0.27",
    "typer>=0.13",
]

[project.scripts]
subterra-hub = "enrollment.admin_cli:app"
subterra-hub-serve = "enrollment.main:serve"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["enrollment*"]
